C3-app are Ready, dev, prod

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Exam Tasks Web Application - Browse and explore exam tasks with different solution approaches. Interactive platform for students and instructors." />
+    <meta name="keywords" content="exam tasks, React, JavaScript, programming, education, INF.04, web development" />
+    <meta name="author" content="Exam Tasks Application" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Exam Tasks Web Application" />
+    <meta property="og:description" content="Interactive platform for browsing and exploring exam tasks with their solutions" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://exam-tasks-app.vercel.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Exam Tasks Web Application" />
+    <meta name="twitter:description" content="Interactive platform for browsing and exploring exam tasks with their solutions" />
+    <title>Exam Tasks Web Application</title>
   </head>
   <body>
     <div id="root"></div>
